--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         
         <!-- Bat image -->
         
-        <img class="bats" src="./img/bats.svg" alt="flying bats image">
+        <img class="bats" src="./img/bats.svg" alt="group of flying bats">
 
-        <li class="mlh-logo"><a href="https://mlh.io/seasons/2023/events" target="_blank"><img src="./img/mlh banner.svg" alt="MLH Banner logo"></a></li>
+        <li class="mlh-logo"><a href="https://mlh.io/seasons/2023/events" target="_blank"><img src="./img/mlh banner.svg" alt="Major League Hacking Banner logo"></a></li>
     </ul>
     </nav>   
         <!-- Side Navigation -->
@@ -37,11 +37,11 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div id="mySidenav" class="sidenav">
-            <img class="ghost-3" src="./img/ghost byte.svg">
-            <a href="#about-section" id="about"><img src="./img/candy 7.svg" alt="candy">About</a>
-            <a href="#faq-section" id="faq"><img src="./img/candy 1.svg" alt="candy">FAQ's</a>
-            <a href="#sponsor-section" id="sponsor"><img src="./img/candy 6.svg" alt="candy">Sponsors</a>
-            <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank" id="register"><img src="./img/candy 8.svg" alt="candy">Register</a>
+            <img class="ghost-3" src="./img/ghost byte.svg" alt="byte mascot as ghost">
+            <a href="#about-section" id="about"><img src="./img/candy 7.svg" alt="twisted color candy">About</a>
+            <a href="#faq-section" id="faq"><img src="./img/candy 1.svg" alt="white wrapper candy">FAQ's</a>
+            <!-- <a href="#sponsor-section" id="sponsor"><img src="./img/candy 6.svg" alt=" orange swirl lollipop candy">Sponsors</a> -->
+            <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank" id="register"><img src="./img/candy 8.svg" alt="blue wrapper candy">Register</a>
           </div>
       </div>
 
@@ -51,16 +51,16 @@
 
     <section class="hack-info">
         <h1>TechTogether<br> Boston</h1>
-        <h3>October 29-30, 2022 @ Boston University</h3>
+        <h2>October 29-30, 2022 @ Boston University</h2>
         <button class="registerbtn"><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">Register Now</a></button>
     </section>
 
     <!-- Byte Images -->
 
     <section class="byte">
-        <img id="ghost-byte1" class="ghost-1" src="./img/ghost byte.png">
-        <img id="witch-byte" src="./img/witch-byte.svg">
-        <img class="ghost-2" src="./img/ghost byte.png">
+        <img id="ghost-byte1" class="ghost-1" src="./img/ghost byte.png" alt="byte mascot as ghost">
+        <img id="witch-byte" src="./img/witch-byte.svg" alt="byte mascot as witch">
+        <img class="ghost-2" src="./img/ghost byte.png" alt="byte mascot as ghost">
     </section>
     </header>
   </section>
