sponsor section update

--- a/index.html
+++ b/index.html
@@ -492,10 +492,12 @@
         </div>
       </div>
     </div>
-
+ 
     <div class="background_sponsor">
       <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
-      <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
+      <!-- <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>  -->
+      <img class="witch" src="/assets/witch hat.svg" alt="witch hat">
+      
       <!-- <div class="sponsors"><h1>Sponsors</h1></div> -->
 
       <!-- <div class="sponsor_logos">
@@ -514,7 +516,7 @@
       <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
   </div>
   <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
-</div>
+</div> 
 
     <!-- Footer Section -->
     
