Accessibility update for about, volunteer

--- a/index.html
+++ b/index.html
@@ -413,46 +413,42 @@
     <div class="VOLUNTEER">
       <h1 class="VOLUNTEER-heading">Share it Forward</h1>
       <div class="VOLUNTEER-cards-container">
+
         <!-- Mentor Hackers -->
         <div class="VOLUNTEER-card">
-          <p class="VOLUNTEER-card-title">Mentor Hackers 👨‍💻</p>
+          <h3 class="VOLUNTEER-card-title">Mentor Hackers 👨‍💻</h3>
           <p class="VOLUNTEER-card-desc">
-
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
-              <p class="VOLUNTEER-card-btn-text">Become a mentor</p>
+              <h3 class="VOLUNTEER-card-btn-text">Become a mentor</h3>
             </a>
           </div>
         </div>
 
         <!-- Workshop Hosts -->
         <div class="VOLUNTEER-card">
-          <p class="VOLUNTEER-card-title">Workshop Hosts 🎤</p>
+          <h3 class="VOLUNTEER-card-title">Workshop Hosts 🎤</h3>
           <p class="VOLUNTEER-card-desc">
-
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
           <!-- TODO: change to valid form link -->
-
-        <!-- Volunteer -->
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
-              <p class="VOLUNTEER-card-btn-text">Host a workshop</p>
+              <h3 class="VOLUNTEER-card-btn-text">Host a workshop</h3>
             </a>
           </div>
         </div>
 
         <!-- Volunteer -->
         <div class="VOLUNTEER-card">
-          <p class="VOLUNTEER-card-title">Volunteer 🙌</p>
+          <h3 class="VOLUNTEER-card-title">Volunteer 🙌</h3>
           <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
@@ -461,26 +457,23 @@
           <!-- TODO: change to valid form link -->
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
-              <p class="VOLUNTEER-card-btn-text">Become a Volunteer</p>
+              <h3 class="VOLUNTEER-card-btn-text">Become a Volunteer</h3>
             </a>
           </div>
         </div>
 
         <!-- Judge -->
         <div class="VOLUNTEER-card">
-          <p class="VOLUNTEER-card-title">Judge 🧑‍⚖️</p>
+          <h3 class="VOLUNTEER-card-title">Judge 🧑‍⚖️</h3>
           <p class="VOLUNTEER-card-desc">
-
             <!-- TODO: Replace with the description from programming team -->
             Reference site about Lorem Ipsum, giving information on its origins,
             as well as a random Lipsum generator.
           </p>
-          
           <!-- TODO: change to valid form link -->
-
           <div class="VOLUNTEER-card-btn">
             <a href="https://www.techtogether.io/" target="_blank">
-              <p class="VOLUNTEER-card-btn-text">Become a judge</p>
+              <h3 class="VOLUNTEER-card-btn-text">Become a judge</h3>
             </a>
           </div>
         </div>
