added space to the countdown

--- a/index.html
+++ b/index.html
@@ -499,20 +499,20 @@
     <div class="background_sponsor">
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
         <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
-        <div class="sponsors"><h1>Sponsors</h1></div>
+        <!-- <div class="sponsors"><h1>Sponsors</h1></div> -->
 
-        <div class="sponsor_logos">
+        <!-- <div class="sponsor_logos">
             <div><a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
             <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-        </div>
+        </div> -->
 
     <!-- Countdown Section -->
     <div class="countdown">
-        <h1>Tech Together Boston <br> Starts In</h1>
+        <h1 class="starts">Tech Together Boston <br> Starts In</h1>
         <p class="time" id="time"></p>
         <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
     </div>
