--- a/index.html
+++ b/index.html
@@ -416,11 +416,10 @@
 
         <!-- Mentor Hackers -->
         <div class="VOLUNTEER-card">
-          <h3 class="VOLUNTEER-card-title">Mentor Hackers 👨‍💻</h3>
+          <h3 class="VOLUNTEER-card-title">Mentor Hacker 👨‍💻</h3>
           <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
-            Reference site about Lorem Ipsum, giving information on its origins,
-            as well as a random Lipsum generator.
+            Help our hackers brainstorm project ideas and squash programming bugs. A great role for professionals that want to volunteer for few hours and enjoy working 1:1 with hackers.
           </p>
           <!-- TODO: change to valid form link -->
           <div class="VOLUNTEER-card-btn">
@@ -432,11 +431,10 @@
 
         <!-- Workshop Hosts -->
         <div class="VOLUNTEER-card">
-          <h3 class="VOLUNTEER-card-title">Workshop Hosts 🎤</h3>
+          <h3 class="VOLUNTEER-card-title">Workshop Host 🎤</h3>
           <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
-            Reference site about Lorem Ipsum, giving information on its origins,
-            as well as a random Lipsum generator.
+            Offer to host a workshop or speak at our upcoming hackathon. A great role for professionals that want to help teach our hackers new skills.
           </p>
           <!-- TODO: change to valid form link -->
           <div class="VOLUNTEER-card-btn">
@@ -451,8 +449,7 @@
           <h3 class="VOLUNTEER-card-title">Volunteer 🙌</h3>
           <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
-            Reference site about Lorem Ipsum, giving information on its origins,
-            as well as a random Lipsum generator.
+            Help out with the event set ups, and other logistic staffing such as workshop staffing, activity, and other tables e.g. mentor tables, and ask TTB table.
           </p>
           <!-- TODO: change to valid form link -->
           <div class="VOLUNTEER-card-btn">
@@ -467,8 +464,7 @@
           <h3 class="VOLUNTEER-card-title">Judge 🧑‍⚖️</h3>
           <p class="VOLUNTEER-card-desc">
             <!-- TODO: Replace with the description from programming team -->
-            Reference site about Lorem Ipsum, giving information on its origins,
-            as well as a random Lipsum generator.
+            Help TechTogether Boston score and provide feedback on the projects created at our hackathon. A great role for professionals that want to volunteer for 1-3 hours and enjoy looking through hackathon projects.
           </p>
           <!-- TODO: change to valid form link -->
           <div class="VOLUNTEER-card-btn">
