made sposnosrships more responsive

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
     <div class="background_sponsor">
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
-        <img class= "witch" src="assets/witch hat.svg" alt="witch hat" width="20%">
+        <!-- <img class="witch" src="assets/witch hat.svg" alt="witch hat" > -->
         <!-- <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div> -->
         <!-- <div class="sponsors"><h1>Sponsors</h1></div> -->
 
