--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <p class="time" id="time"></p>
         <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
     </div>
-    <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
+    <div class="bucket"><img src="assets/full bucket.svg" alt="buckets of candy" width="30%"></div>
 </div>
 
 
