--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <img class="bats" src="./img/bats.svg" alt="group of flying bats">
 
-        <li class="mlh-logo"><a href="https://mlh.io/seasons/2023/events" target="_blank"><img src="./img/mlh banner.svg" alt="Major League Hacking Banner logo"></a></li>
+        <li class="mlh-logo"><a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/na?utm_source=na-hackathon&utm_medium=TrustBadge&utm_campaign=2023-season&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2023/mlh-trust-badge-2023-white.svg" alt="Major League Hacking 2023 Hackathon Season" style="width:100%"></a></li>
     </ul>
     </nav>   
         <!-- Side Navigation -->
@@ -521,7 +521,7 @@
     
     <footer class="footer-section">
   
-      <p>Still have questions? <br> Contact email@email.com</p>
+      <p>Still have questions? <br> Contact info@techtogether.io</p>
       <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>
 
       <section class="icons">
