added labels to countdown, hover on register

--- a/index.html
+++ b/index.html
@@ -497,6 +497,12 @@
     <div class="countdown">
         <h1 class="starts">Tech Together Boston <br> Starts In</h1>
         <p class="time" id="time"></p>
+        <ul>
+          <li><span id="days"></span>DAYS</li>
+          <li><span id="hours"></span>HOURS</li>
+          <li><span id="minutes"></span>MINUTES</li>
+          <li><span id="seconds"></span>SECONDS</li>
+        </ul>
         <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
     </div>
     <div class="bucket"><img src="assets/full bucket.svg" alt="buckets of candy" width="30%"></div>
