--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="hack-info">
         <h1>TechTogether<br> Boston</h1>
         <h2>October 29-30, 2022 @ Boston University</h2>
-        <button class="registerbtn"><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">Register Now!</a></button>
+        <button class="registerbtn"><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">Register Now</a></button>
     </section>
 
     <!-- Byte Images -->
