--- a/index.html
+++ b/index.html
@@ -477,21 +477,18 @@
     </div>
 
 
-
+    <!-- Sponsors section -->
     <div class="background_sponsor">
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
-        <!-- <img class="witch" src="assets/witch hat.svg" alt="witch hat" > -->
-        <!-- <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div> -->
-        <!-- <div class="sponsors"><h1>Sponsors</h1></div> -->
+        <div class="sponsors"><h1>Sponsors</h1></div>
 
-        <!-- <div class="sponsor_logos">
-            <div><a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" width="200" height="200"/></a></div>
-            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-            <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-        </div> -->
+       <div class="sponsor_logos">
+            <div><a href="https://balsamiq.com/" target="_blank" rel="noopener noreferrer"><img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="balsamiq logo" width="200" height="200"/></a></div>
+            <div><a href="https://azure.microsoft.com/en-us/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="200"/></a></div>
+            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
+            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
+            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
+        </div>
 
     <!-- Countdown Section -->
     <div class="countdown">
@@ -503,7 +500,7 @@
           <li><span id="minutes"></span>MINUTES</li>
           <li><span id="seconds"></span>SECONDS</li>
         </ul>
-        <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
+        <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank" rel="noopener noreferrer"><button class="button rounded register">Register Now</button></a>
     </div>
     <div class="bucket"><img src="assets/full bucket.svg" alt="buckets of candy" width="30%"></div>
 </div>
