--- a/index.html
+++ b/index.html
@@ -480,14 +480,13 @@
     <!-- Sponsors section -->
     <div class="background_sponsor">
         <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
+        <div class="witch_hat"><img src="assets/witch hat.svg" alt="witch hat" width="25%"></div>
         <div class="sponsors"><h1>Sponsors</h1></div>
 
-       <div class="sponsor_logos">
-            <div><a href="https://balsamiq.com/" target="_blank" rel="noopener noreferrer"><img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="balsamiq logo" width="200" height="200"/></a></div>
-            <div><a href="https://azure.microsoft.com/en-us/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="200"/></a></div>
-            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
-            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
-            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" d1 height="200"/></a></div>
+       <div class="sponsor_logo">
+            <div><a href="https://balsamiq.com/" target="_blank" rel="noopener noreferrer"><img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="Balsamiq logo" width="200" height="150"/></a></div>
+            <div><a href="https://azure.microsoft.com/en-us/" target="_blank" rel="noopener noreferrer"><img class="img_m" src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="150"/></a></div>
+            <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img class="img" src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" height="150"/></a></div>
         </div>
 
     <!-- Countdown Section -->
