added new question regarding virtual/hybrid

--- a/index.html
+++ b/index.html
@@ -253,6 +253,26 @@
             </div>
             <hr class="FAQ-hr" />
           </div>
+
+          <!-- Question 14 -->
+          <div class="FAQ-question-div">
+            <button class="FAQ-question-header">
+              Is TechTogether virtual?
+            </button>
+            <img
+              class="FAQ-arrow"
+              src="./img/arrow-down.svg"
+              alt="FAQ-arrow-down"
+            />
+            <div class="FAQ-answer-div">
+              <p class="FAQ-answer">
+                No. Although the Discord channel opens on Tuesday of the week
+                of the hackathon, nothing else about the event will be virtual.
+              </p>
+            </div>
+            <hr class="FAQ-hr" />
+          </div>
+          
         </div>
         <!-- end of FAQ-column -->
 
@@ -401,7 +421,7 @@
             </div>
             <hr class="FAQ-hr" />
           </div>
-        </div>
+
         <!-- end of FAQ-column -->
       </div>
       <!-- end of FAQ-row -->
