Added devpost link to buttons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <section class="hack-info">
         <h1>TechTogether<br> Boston</h1>
         <h2>October 29-30, 2022 @ Boston University</h2>
-        <button class="registerbtn"><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">View Challenges</a></button>
-        <button class="registerbtn"><a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank">Submit Project</a></button>
+        <button class="registerbtn"><a href="https://techtogether-boston-2023.devpost.com/" target="_blank">View Challenges</a></button>
+        <button class="registerbtn"><a href="https://techtogether-boston-2023.devpost.com/" target="_blank">Submit Project</a></button>
     </section>
 
     <!-- Byte Images -->
