--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
   <div class="countdown">
       <h1>Tech Together Boston <br> Starts In</h1>
       <p class="time" id="time"></p>
-      <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
+      <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Submit Project</button></a>
   </div>
   <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
 </div> 
