add capital one sponsor

--- a/index.html
+++ b/index.html
@@ -508,25 +508,23 @@
     </div>
  
     <div class="background_sponsor">
-      <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
-      <div class="witch"><img src="assets/witch hat.svg" alt="witch hat" width="20%"></div>
-      
-      <!-- <div class="sponsors"><h1>Sponsors</h1></div> -->
 
-      <!-- <div class="sponsor_logos">
-          <div><a href="https://www.slalombuild.com/"><img src="" alt="Slalom_Build" width="200" height="200"/></a></div>
-          <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-          <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-          <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-          <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-          <div><a href=""><img src="" alt="" width="200" height="200"/></a></div>
-      </div> -->
+      <div class="bat"><img src="assets/bats.svg" alt="bats" width="35%"></div>
+      <div class="witch_hat"><img src="assets/witch hat.svg" alt="witch hat" width="25%"></div>
+      <div class="sponsors"><h1>Sponsors</h1></div>
+
+     <div class="sponsor_logo">
+          <div><a href="https://balsamiq.com/" target="_blank" rel="noopener noreferrer"><img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="Balsamiq logo" width="200" height="150"/></a></div>
+          <div><a href="https://azure.microsoft.com/en-us/" target="_blank" rel="noopener noreferrer"><img class="img_m" src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="150"/></a></div>
+          <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer"><img class="img" src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" height="150"/></a></div>
+          <div><img class="img" src="assets/Capital One Logo.png" alt="Capital One logo" width="200" height="150"></div>
+      </div>
 
   <!-- Countdown Section -->
   <div class="countdown">
       <h1>Tech Together Boston <br> Starts In</h1>
       <p class="time" id="time"></p>
-      <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Submit Project</button></a>
+      <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston"><button class="button rounded register">Register Now</button></a>
   </div>
   <div class="bucket"><img src="assets/full bucket.svg" alt="" width="30%"></div>
 </div> 
