update image sizes to maintain aspect ratio

--- a/index.html
+++ b/index.html
@@ -453,27 +453,27 @@
 
        <div class="sponsor_logo">
             <div><a href="https://balsamiq.com/" target="_blank" rel="noopener noreferrer">
-              <img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="Balsamiq logo" width="200" height="150"/></a></div>
+              <img  class="img" src="assets/sponsorship logo/Balsamiq.svg" alt="Balsamiq logo" width="200" height="auto"/></a></div>
             <div><a href="https://azure.microsoft.com/en-us/" target="_blank" rel="noopener noreferrer">
-              <img class="img_m" src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="150"/>
+              <img class="img_m" src="assets/sponsorship logo/microsoft_azure_logo 2.png" alt="Microsoft logo" width="400" height="auto"/>
             </a></div>
             <div><a href="https://mlh.io/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" height="150"/>
+              <img class="img" src="assets/sponsorship logo/Mlh-logo-color.svg" alt="MLH logo" width="200" height="auto"/>
             </a></div>
             <div><a href="https://www.capitalone.com/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/Capital One Logo.png" alt="Capital One logo" width="200" height="150">
+              <img class="img" src="assets/sponsorship logo/Capital One Logo.png" alt="Capital One logo" width="200" height="auto">
             </a></div>
             <div><a href="https://www.cargurus.com/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/car gurus.svg" alt="Car Gurus logo" width="300" height="150"/>
+              <img class="img" src="assets/sponsorship logo/car gurus.svg" alt="Car Gurus logo" width="300" height="auto"/>
             </a></div>
             <div><a href="https://circleci.com/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/circleci.svg" alt="circleCi logo" width="250" height="150"/>
+              <img class="img" src="assets/sponsorship logo/circleci.svg" alt="circleCi logo" width="250" height="auto"/>
             </a></div>
             <div><a href="https://www.pega.com/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/pegaSystems.svg" alt="PegaSystems logo" width="300" height="150"/>
+              <img class="img" src="assets/sponsorship logo/pegaSystems.svg" alt="PegaSystems logo" width="300" height="auto"/>
             </a></div>
             <div><a href="https://www.slalombuild.com/" target="_blank" rel="noopener noreferrer">
-              <img class="img" src="assets/sponsorship logo/slalom.png" alt="Slalom build logo" width="450" height="150"/>
+              <img class="img" src="assets/sponsorship logo/slalom.png" alt="Slalom build logo" width="450" height="auto"/>
             </a></div>
             <div><a href="https://www.statestreet.com/home.html" target="_blank" rel="noopener noreferrer">
               <img class="img" src="assets/sponsorship logo/state-street.svg" alt="State Street logo" width="250" height="150"/>
