remove countdown section

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         </div>
 
     <!-- Countdown Section -->
-    <div class="countdown">
+    <!-- <div class="countdown">
         <h1 class="starts">Tech Together Boston <br> Starts In</h1>
         <p class="time" id="time"></p>
         <ul>
@@ -493,7 +493,7 @@
         <a href="https://organize.mlh.io/participants/events/8321-techtogether-boston" target="_blank" rel="noopener noreferrer">
           <button class="button rounded register">Register Now</button>
       </a>
-    </div>
+    </div> -->
 
 
     <!-- Footer Section -->
