sponsor logos update

--- a/index.html
+++ b/index.html
@@ -479,6 +479,24 @@
             <div><a href="https://www.statestreet.com/home.html" target="_blank" rel="noopener noreferrer">
               <img class="img" src="assets/sponsorship logo/state-street.svg" alt="State Street logo" width="250" height="150"/>
             </a></div>
+            <div><a href="https://www.bu.edu/cs/" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/bu-cs.png" alt="BU CS logo" width="250" height="auto"/>
+            </a></div>
+            <div><a href="" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/bu-ce.png" alt="BU CE logo" width="200" height="auto"/>
+            </a></div>
+            <div><a href="https://www.bu.edu/tech/" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/bu-is&t.png" alt="IS&T logo" width="250" height="auto"/>
+            </a></div>
+            <div><a href="" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/bu.png" alt="BU Research logo" width="250" height="auto"/>
+            </a></div>
+            <div><a href="https://www.bu.edu/cds-faculty/" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/bu-cds.jpeg" alt="CDS logo" width="200" height="auto"/>
+            </a></div>
+            <div><a href="https://www.bu.edu/spark/" target="_blank" rel="noopener noreferrer">
+              <img class="img" src="assets/sponsorship logo/spark.png" alt="Spark logo" width="250" height="auto"/>
+            </a></div>
 
         </div>
 
